--- a/home_work19/style.css
+++ b/home_work19/style.css
@@ -118,3 +118,13 @@ body {
   border-color: #fff;
   background-color: rgb(248, 90, 235);
 }
+
+.wrapper {
+  color: #000;
+}
+
+.list {
+  color: #000;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
